css/styles.css
/*
=============== 
Fonts
===============
*/
@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");

/*
=============== 
Variables
===============
*/

:root {
  /* dark shades of primary color*/
  --clr-primary-1: #513c06;
  --clr-primary-2: hsl(43, 77%, 27%);
  --clr-primary-3: hsl(43, 72%, 37%);
  --clr-primary-4: hsl(42, 63%, 48%);
  /* primary/main color */
  --clr-primary-5: #e9b949;
  /* lighter shades of primary color */
  --clr-primary-6: hsl(43, 89%, 70%);
  --clr-primary-7: hsl(43, 90%, 76%);
  --clr-primary-8: hsl(45, 86%, 81%);
  --clr-primary-9: hsl(45, 90%, 88%);
  --clr-primary-10: hsl(45, 100%, 96%);
  /* darkest grey - used for headings */
  --clr-grey-1: hsl(209, 61%, 16%);
  --clr-grey-2: hsl(211, 39%, 23%);
  --clr-grey-3: hsl(209, 34%, 30%);
  --clr-grey-4: hsl(209, 28%, 39%);
  /* grey used for paragraphs */
  --clr-grey-5: hsl(210, 22%, 49%);
  --clr-grey-6: hsl(209, 23%, 60%);
  --clr-grey-7: hsl(211, 27%, 70%);
  --clr-grey-8: hsl(210, 31%, 80%);
  --clr-grey-9: hsl(212, 33%, 89%);
  --clr-grey-10: hsl(210, 36%, 96%);
  --clr-white: #fff;
  --ff-primary: "Roboto", sans-serif;
  --ff-secondary: "Open Sans", sans-serif;
  --transition: all 0.3s linear;
  --spacing: 0.25rem;
  --radius: 0.5rem;
  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  --max-width: 1170px;
}
/*
=============== 
Global Styles
===============
*/

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: var(--ff-secondary);
  background: var(--clr-white);
  color: var(--clr-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none;
}
img:not(.nav-logo) {
  width: 100%;
  display: block;
}

h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
  font-family: var(--ff-primary);
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 0.875rem;
}
p {
  margin-bottom: 1.25rem;
  color: var(--clr-grey-5);
}
@media screen and (min-width: 800px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 2.5rem;
  }
  h3 {
    font-size: 1.75rem;
  }
  h4 {
    font-size: 1rem;
  }
  body {
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}
/*  global classes */

.btn {
  text-transform: uppercase;
  background: var(--clr-primary-5);
  color: var(--clr-primary-1);
  padding: 0.375rem 0.75rem;
  letter-spacing: var(--spacing);
  display: inline-block;
  font-weight: 700;
  -webkit-transition: var(--transition);
  transition: var(--transition);
  font-size: 0.875rem;
  border: 2px solid transparent;
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  border-radius: var(--radius);
}
.btn:hover {
  color: var(--clr-primary-1);
  background: var(--clr-primary-7);
}
/* section */
.section {
  padding: 5rem 0;
}

.section-center {
  width: 90vw;
  margin: 0 auto;
  max-width: 1170px;
}
@media screen and (min-width: 992px) {
  .section-center {
    width: 95vw;
  }
}
/* added during recording */
.underline {
  width: 5rem;
  height: 0.25rem;
  margin-bottom: 1.25rem;
  background: var(--clr-primary-5);
  margin-left: auto;
  margin-right: auto;
}
.section-title {
  margin-bottom: 4rem;
  text-align: center;
}
.bg-grey {
  background: var(--clr-grey-10);
}
.section-btn {
  text-align: center;
  margin-top: 2rem;
}
/*
=============== 
Navbar
===============
*/
.navbar-fixed {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: var(--clr-white);
  box-shadow: var(--light-shadow);
  z-index: 2;
}
.nav-links {
  display: none;
}
.nav-logo {
  text-align: center;
  text-transform: capitalize;
  justify-items: center;
  text-shadow: 2px 2px 5px var(--clr-grey-1);
}
.nav-logo h3 {
  font-size: 2rem;
}
.nav-logo span {
  color: var(--clr-primary-5);
}
.nav {
  height: 5rem;
  padding: 1rem;
  display: grid;
  align-items: center;
  transition: var(--transition);
}
.nav-center {
  width: 100%;
  max-width: 1170px;
  margin: 0 auto;
}
.nav-header {
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  justify-items: center;
}
.nav-btn {
  background: transparent;
  border-color: transparent;
  color: var(--clr-primary-5);
  cursor: pointer;
  font-size: 2rem;
  justify-self: end;
}
@media screen and (min-width: 768px) {
  .nav {
    background-color: var(--clr-primary-8);
  }
  .nav-btn {
    display: none;
  }

  .nav-links {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    justify-items: center;
    align-items: center;
    column-gap: 2rem;
  }
  .nav-links a {
    text-transform: capitalize;
    color: var(--clr-grey-1);
    font-weight: bold;
    letter-spacing: var(--spacing);
    transition: var(--transition);
  }
  .nav-links a:hover {
    color: var(--clr-primary-5);
  }
  .nav-center {
    display: grid;
    grid-template-columns: auto 1fr;
  }
}
/*
=============== 
Sidebar
===============
*/
.sidebar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: var(--clr-grey-10);
  z-index: 2;
  display: grid;
  /* align-items: center;
  justify-content: center; */
  place-items: center;
  transition: var(--transition);
  transform: translateX(-100%);
}
.close-btn {
  color: #bb2525;
  background: transparent;
  border: transparent;
  font-size: 3rem;
  position: absolute;
  top: 1rem;
  right: 1rem;
}
.close-btn:hover {
  color: #e66b6b;
}
.sidebar-links {
  text-align: center;
}
.sidebar-links a {
  font-size: 2rem;
  text-transform: capitalize;
  transition: var(--transition);
  color: var(--clr-grey-5);
  display: inline-block;
  letter-spacing: var(--spacing);
  margin-bottom: 1.5rem;
}
.sidebar-links a:hover {
  color: var(--clr-primary-5);
}
.social-icons {
  display: grid;
  margin-top: 3rem;
  grid-template-columns: repeat(5, 1fr);
  width: 20rem;
  justify-items: center;
}
.social-icon {
  font-size: 1.5rem;
  color: var(--clr-grey-1);
  transition: var(--transition);
}
.social-icon:hover {
  color: var(--clr-primary-5);
}
.show-sidebar {
  transform: translate(0);
}
/*
=============== 
Hero
===============
*/
/* underline added to globals */
.hero .underline {
  margin-bottom: 0.5rem;
  margin-left: 0;
}
.hero-img {
  display: none;
}
.hero {
  background: var(--clr-primary-8);
}
.hero-center {
  min-height: calc(100vh - 5rem);
  display: grid;
  padding-top: 1rem;
  place-items: center;
  padding-bottom: 1rem;
}
.hero-info h4 {
  color: var(--clr-grey-5);
  line-height: 2;
}
.hero-icons {
  display: grid;
  grid-template-columns: 1fr;
  font-size: 1.5rem;
}
.hero-icons li {
  padding-bottom: 1rem;
  color: var(--clr-grey-1);
}
.hero-photo {
  max-height: 30rem;
  max-width: 25rem;
  object-fit: cover;
  border-radius: var(--radius);
  position: relative;
}
.hero-btn {
  margin: 1rem 2rem 2rem 0;
}
@media screen and (min-width: 992px) {
  .hero-img {
    display: block;
    position: relative;
  }
  .hero-center {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
  .hero-img::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    border: 0.25rem solid var(--clr-primary-5);
    top: 1.5rem;
    left: 1.5rem;
    border-radius: var(--radius);
  }
}
/*
=============== 
About
===============
*/
/* section title added to globals */
.about-title {
  text-align: left;
  margin-bottom: 2rem;
}
.about-title .underline {
  margin-left: 0;
}
.about-center {
  display: grid;
  gap: 3rem 2rem;
}
.about-img {
  justify-self: center;
}
.about-info p {
  text-align: justify;
}
@media screen and (min-width: 968px) {
  .about-center {
    grid-template-columns: 1fr 1fr;
  }
  .about-info {
    align-self: center;
  }
  .about-img {
    position: relative;
    max-height: 30rem;
    max-width: 25rem;
  }
  .about-img::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    border: 0.25rem solid var(--clr-primary-5);
    top: 1.5rem;
    right: 1.5rem;
    border-radius: var(--radius);
  }
}
/*
=============== 
Courses
===============
*/
/* small screen layout setup */
/* bg-grey in globals */
.course {
  background: var(--clr-white);
  padding: 3rem 1.5rem;
  border-radius: var(--radius);
  margin-bottom: 2rem;
  text-align: center;
  transition: var(--transition);
}
.course-icon {
  font-size: 2rem;
  margin-bottom: 1.5rem;
}
.course .underline {
  width: 3rem;
  height: 0.12rem;
  transition: var(--transition);
}
.course p {
  text-align: justify;
  transition: var(--transition);
}
.course:hover {
  background: var(--clr-primary-5);
  color: var(--clr-white);
}
.course:hover p {
  color: var(--clr-white);
}
.course:hover .underline {
  background: var(--clr-white);
}

@media screen and (min-width: 992px) {
  .courses-center {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1rem 1rem;
  }
}
/*
=============== 
events
===============
*/
.events-text {
  width: 80vw;
  /* max-width: 30rem; */
  margin: 0 auto;
}
.event {
  position: relative;
  background: var(--clr-primary-5);
  border-radius: var(--radius);
  margin-bottom: 2rem;
}
.event-info {
  text-align: center;
  color: var(--clr-white);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  transition: var(--transition);
  opacity: 0;
}
.event-info p {
  text-transform: capitalize;
  color: var(--clr-white);
}
.event:hover .event-info {
  opacity: 1;
}
.event-img {
  transition: var(--transition);
  border-radius: var(--radius);
  height: 15rem;
  object-fit: cover;
}
.event:hover .event-img {
  opacity: 0.1;
}
.event::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0.25rem solid #fff;
  border-radius: var(--radius);
  transition: var(--transition);
  opacity: 0;
}
.event:hover::after {
  opacity: 1;
  transform: scale(0.8);
}
@media screen and (min-width: 678px) {
  .events-center {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2rem;
  }
}
@media screen and (min-width: 992px) {
  .events-center {
    grid-template-columns: 1fr 1fr 1fr;
  }
}
@media screen and (min-width: 1170px) {
  .events-center {
    grid-template-rows: 200px 200px;
    grid-template-areas:
      "b a a"
      "b c d";
  }
  .event-img {
    height: 100%;
  }
  .event {
    height: 100%;
  }
  .event-1 {
    grid-area: a;
  }
  .event-2 {
    grid-area: b;
  }
  .event-3 {
    grid-area: c;
  }
  .event-4 {
    grid-area: d;
  }
}
/*
=============== 
Connect
===============
*/
.connect {
  min-height: 40vh;
  position: relative;
  padding: 10rem 0 5rem 0;
  margin: 5rem 0;
  display: grid;
  place-items: center;
  clip-path: polygon(50% 0, 100% 10%, 100% 90%, 50% 99%, 0 90%, 0 10%);
}
.video-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -2;
}
.connect::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: var(--clr-white);
  opacity: 0.7;
  z-index: -1;
}
.video-banner .section-title {
  margin-bottom: 2rem;
}
.video-text {
  max-width: 30rem;
  margin: 2rem auto;
}
.video-banner {
  background: var(--clr-primary-10);
  padding: 3rem 5rem 12rem 5rem;
  text-align: center;
  clip-path: polygon(
    0% 0,
    100% 0%,
    100% 75%,
    75% 75%,
    75% 100%,
    50% 75%,
    0% 75%
  );
}
/*
=============== 
Skills
===============
*/
/*
=============== 
Timeline
===============
*/

/*
=============== 
Blog
===============
*/

/*
=============== 
Footer
===============
*/
/*
=============== 
Single Page
===============
*/

/*
=============== 
Products Page
===============
*/

